...
    <string name="enable_delete_mode">Enable Delete Mode</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="delete_confirmation">Are you sure you want to delete this article?</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="ok">OK</string>
    <string name="read_more">Read More</string>
    <string name="no_link">No Link</string>

    <!-- Form -->
    <string name="get_in_touch">Get in touch</string>
    <string name="receive_help_text">Receive the help you need</string>
...
